display by weekday

--- a/cal/templates/index.html
+++ b/cal/templates/index.html
@@ -25,8 +25,32 @@
 	<div class="col-md-10">
 	<table class="table table-bordered">
  		<tr>
-    		<td><h3>Monday</h3></td>
-    		<td><h3>Tuesday</h3></td> 
+    		<td>
+    			<h3>Monday</h3>
+    			<ul>
+    				{% for event in events %}
+    				<li>
+    					<p>{{ event.name }}</p>
+						<p>{{ event.location }}</p>
+						<p>{{ event.start.weekday() }}</p>
+						<p>{{ event.start.strftime("%b %d, %Y %H:%M:%S")}}</p>
+					</li>
+					{% endfor %}
+    			</ul>
+    		</td>
+    		<td>
+    			<h3>Tuesday</h3>
+    			<ul>
+    				{% for event in events %}
+    				<li>
+    					<p>{{ event.name }}</p>
+						<p>{{ event.location }}</p>
+						<p>{{ event.start.weekday() }}</p>
+						<p>{{ event.start.strftime("%b %d, %Y %H:%M:%S")}}</p>
+					</li>
+					{% endfor %}
+    			</ul>
+    		</td> 
     		<td><h3>Wednesday</h3></td>
     		<td><h3>Thursday</h3></td>
     		<td><h3>Friday</h3></td>
