--- a/cal/templates/index.html
+++ b/cal/templates/index.html
@@ -33,7 +33,6 @@
     				<li>
     					<p>{{ event.name }}</p>
 						<p>{{ event.location }}</p>
-						<p>{{ event.start.weekday() }}</p>
 						<p>{{ event.start.strftime("%b %d, %Y %H:%M:%S")}}</p>
 					</li>
 					{% endfor %}
@@ -46,7 +45,6 @@
     				<li>
     					<p>{{ event.name }}</p>
 						<p>{{ event.location }}</p>
-						<p>{{ event.start.weekday() }}</p>
 						<p>{{ event.start.strftime("%b %d, %Y %H:%M:%S")}}</p>
 					</li>
 					{% endfor %}
@@ -59,7 +57,6 @@
     				<li>
     					<p>{{ event.name }}</p>
 						<p>{{ event.location }}</p>
-						<p>{{ event.start.weekday() }}</p>
 						<p>{{ event.start.strftime("%b %d, %Y %H:%M:%S")}}</p>
 					</li>
 					{% endfor %}
@@ -72,7 +69,6 @@
     				<li>
     					<p>{{ event.name }}</p>
 						<p>{{ event.location }}</p>
-						<p>{{ event.start.weekday() }}</p>
 						<p>{{ event.start.strftime("%b %d, %Y %H:%M:%S")}}</p>
 					</li>
 					{% endfor %}
@@ -85,7 +81,6 @@
     				<li>
     					<p>{{ event.name }}</p>
 						<p>{{ event.location }}</p>
-						<p>{{ event.start.weekday() }}</p>
 						<p>{{ event.start.strftime("%b %d, %Y %H:%M:%S")}}</p>
 					</li>
 					{% endfor %}
@@ -98,7 +93,6 @@
     				<li>
     					<p>{{ event.name }}</p>
 						<p>{{ event.location }}</p>
-						<p>{{ event.start.weekday() }}</p>
 						<p>{{ event.start.strftime("%b %d, %Y %H:%M:%S")}}</p>
 					</li>
 					{% endfor %}
@@ -106,7 +100,7 @@
     		</td>
     		<td>
     			<h3>Sunday</h3>
-    			<ul>
+    			<ul class="list-unstyled">
     				{% for event in sunday_events %}
     				<li>
     					<p>{{ event.name }}</p>
