--- a/cal/templates/index.html
+++ b/cal/templates/index.html
@@ -29,6 +29,7 @@
 		<tr>
 			{% for event in events %}
 			<td>
+				<h3>Search Results</h3>
 				<ul id="event">
 					<li>
 						<p>{{ event.name }}</p>
